<resources>
    <string name="app_name">PLAHTON</string>
    <string name="sub_app_name">IT Courses</string>
    <string name="title_reg">Регистрация</string>
    <string name="title_login">Авторизация</string>
    <string name="login_field_hint">Введите логин</string>
    <string name="email_field_hint">Введите почту</string>
    <string name="password_field_hint">Введите пароль</string>
    <string name="phone_field_hint">Введите номер телефона</string>
    <string name="button_reg_text">Создать аккаунт</string>
    <string name="button_login_text">Войти</string>
    <string name="to_registration_btn_text">Зарегистрироваться</string>
    <string name="to_login_btn_text">Авторизоваться</string>
    <string name="delete_by_login_btn">Удалить по логину</string>
    <string name="activity.user_preview.title">Личный кабинет</string>
    <string name="activity.activity_catalog.title">Каталог</string>
    <string name="activity.user_preview.default_full_name">Пользователь</string>
    <string name="activity.user_preview.default_email">Email:</string>
    <string name="activity.user_preview.default_phone">Телефон:</string>
    <string name="activity.user_preview.logout_btn">Выйти</string>
    <string name="activity.activity_main.catalog_btn">Каталог</string>
    <string name="activity.activity_main.account_btn">Аккаунт</string>
    <string name="fragment.course_group_list.group_btn">Оставить заявку</string>
    <string name="fragment.course_list.course_btn">Просмотреть группы</string>
</resources>