<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="@color/app_background_color"
    android:layout_height="match_parent"
    tools:context=".activity.AuthActivity"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="100dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/title_login"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_field"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:textColorHint="#5F5F5F"
        android:inputType="text"
        android:hint="@string/login_field_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:textColorHint="#5F5F5F"
        android:layout_marginStart="101dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password_field_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_field" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="208dp"
        android:layout_height="48dp"
        android:layout_marginStart="101dp"
        android:textColor="@android:color/white"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="102dp"
        android:text="@string/button_login_text"
        android:backgroundTint="@color/background_reg"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_field" />

    <TextView
        android:id="@+id/switch_page_to_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:text="@string/to_registration_btn_text"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>